src-tauri/check_output.txt
    Checking tauri-app v0.1.0 (D:\Github\vibe\src-tauri)
error[E0277]: can't compare `str` with `std::string::String`
  --> src\lib.rs:52:36
   |
52 |                     if record_time < start {
   |                                    ^ no implementation for `str < std::string::String` and `str > std::string::String`
   |
   = help: the trait `PartialOrd<std::string::String>` is not implemented for `str`
   = note: required for `&str` to implement `PartialOrd<&std::string::String>`
help: consider dereferencing both sides of the expression
   |
52 |                     if *record_time < **start {
   |                        +              ++

error[E0277]: can't compare `str` with `std::string::String`
  --> src\lib.rs:57:36
   |
57 |                     if record_time > end {
   |                                    ^ no implementation for `str < std::string::String` and `str > std::string::String`
   |
   = help: the trait `PartialOrd<std::string::String>` is not implemented for `str`
   = note: required for `&str` to implement `PartialOrd<&std::string::String>`
help: consider dereferencing both sides of the expression
   |
57 |                     if *record_time > **end {
   |                        +              ++

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tauri-app` (lib) due to 2 previous errors
